add all images and insert home page

--- a/index.html
+++ b/index.html
@@ -1,41 +1,292 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My-mobile-Web</title>
 
-    <!-- Google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@300&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My-mobile-Web</title>
 
-    <!-- CSS Stylesheets -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styels/style.css" />
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@300&display=swap"
+    rel="stylesheet" />
 
-    <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/a87e8bf9f7.js"
-      crossorigin="anonymous"
-    ></script>
+  <!-- CSS Stylesheets -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="styels/style.css" />
 
-    <!-- Boostrap Scripts -->
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/a87e8bf9f7.js" crossorigin="anonymous"></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <script src="scripts/script.js"></script>
-  </body>
+  <!-- Boostrap Scripts -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+  <!-- HOME NAVBAR -->
+  <section id="home-navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand brand-head">OPPO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav">
+          <li class='nav-item'>
+            <a class="nav-link smartphones" data-tab="1">Smartphones</a>
+          </li>
+          <li class='nav-item'>
+            <a class="nav-link tablets" data-tab="2">Tablets</a>
+          </li>
+          <li class='nav-item'>
+            <a class="nav-link airphones" data-tab="3">Audio</a>
+          </li>
+          <li class='nav-item'>
+            <a class="nav-link watch" data-tab="4">Wearables</a>
+          </li>
+          <li class='nav-item'>
+            <a class="nav-link chargers" data-tab="5">Accesories</a>
+          </li>
+          <li class='nav-item'>
+            <a class="nav-link about__oppo" data-tab="6">About OPPO</a>
+          </li>
+          <li class='nav-item'>
+
+      </div>
+      </ul>
+  </section>
+
+  <!-- Navbar first box 1️⃣1️⃣1️⃣1️⃣ -->
+
+  <section id="mobile__content">
+
+    <div class="container-fluid oppo__product  hidden  product__1">
+      <!-- 1 -->
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/find-n2-flip-purple_440_440_in.png.thumb.webp">
+        <p class="box-text">OPPO Find N2 Flip</p>
+      </div>
+
+
+      <!-- 2 -->
+
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/Reno8-T-5G_gold.png.thumb.webp">
+        <p class="box-text">OPPO Reno8 T 5G</p>
+      </div>
+
+      <!-- 3 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/A78-5G_blue.png.thumb.webp">
+        <p class="box-text">OPPO A78 5g</p>
+      </div>
+
+
+      <!-- 4 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/f21s-pro-5g-gold.png.thumb.webp">
+        <p class="box-text">OPPO F21s Pro 5G</p>
+      </div>
+
+      <!-- 5-->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/A54-5G_Purple.png.thumb.webp">
+        <p class="box-text">OPPO A74 5G</p>
+      </div>
+
+      <!-- 6 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/k10.png.thumb.webp">
+        <p class="box-text">OPPO K10</p>
+      </div>
+
+    </div>
+
+
+
+
+
+
+    <!-- Navbar second box 2️⃣2️⃣2️⃣2️⃣  -->
+
+
+    <div class="container-fluid oppo__product hidden product__2">
+      <!-- 1 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/pad.png.thumb.webp">
+        <p class="box-text">OPPO F21s Pro 5G</p>
+      </div>
+    </div>
+
+
+
+
+    <!-- Navbar Third box 3️⃣3️⃣3️⃣3️⃣  -->
+
+
+    <div class="container-fluid oppo__product hidden product__3">
+      <!-- 1 -->
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/enco-air3-white-440_440-v3.png.thumb.webp">
+        <p class="box-text">OPPO Enco Air3</p>
+      </div>
+
+
+      <!-- 2 -->
+
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/enco-buds2-black.png.thumb.webp">
+        <p class="box-text">OPPO Enco Buds2</p>
+      </div>
+
+      <!-- 3 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/enco-x2.png.thumb.webp">
+        <p class="box-text">OPPO Enco X2</p>
+      </div>
+
+
+      <!-- 4 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/enco-air2-pro.png.thumb.webp">
+        <p class="box-text">OPPO Enco Air2 Pro</p>
+      </div>
+
+      <!-- 5-->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/enco-air2.png.thumb.webp">
+        <p class="box-text">OPPO Enco Air2</p>
+      </div>
+
+      <!-- 6 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/m32.png.thumb.webp">
+        <p class="box-text">OPPO Enco M32</p>
+      </div>
+    </div>
+
+
+    <!-- Navbar Forth box 4️⃣4️⃣4️⃣4️⃣ -->
+
+
+    <div class="container-fluid oppo__product hidden product__4">
+      <!-- 1 -->
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/watch-free.png.thumb.webp">
+        <p class="box-text">OPPO Watch Free</p>
+      </div>
+
+
+      <!-- 2 -->
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/watch-46mm.png.thumb.webp">
+        <p class="box-text">OPPO Watch 46mm</p>
+      </div>
+
+      <!-- 3 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/oppo-band.png.thumb.webp">
+        <p class="box-text">OPPO Band Style</p>
+      </div>
+
+
+    </div>
+
+
+
+    <!-- Navbar Five box 5️⃣5️⃣5️⃣5️⃣-->
+
+
+    <div class="container-fluid oppo__product hidden product__5">
+
+      <!-- 1 -->
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/33W-Power-Adapter.png.thumb.webp">
+        <p class="box-text">OPPO SUPERVOOV 33W 33W Power Adapter</p>
+      </div>
+
+
+      <!-- 2 -->
+
+
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/10W-Power-Adapter.png.thumb.webp">
+        <p class="box-text">OPPO 10W Power Adapter</p>
+      </div>
+
+      <!-- 3 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/VOOC-Type-C-Data-Cable-1M.png.thumb.webp">
+        <p class="box-text">OPPO Type-C VOOC cable</p>
+      </div>
+
+
+
+      <!-- 4-->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/pen.png.thumb.webp">
+        <p class="box-text">OPPO Protective Cases</p>
+      </div>
+
+      <!-- 5 -->
+      <div class="mobile__content">
+        <img class="mobile-images" src="images/protective-cases-black.png.thumb.webp">
+        <p class="box-text">OPPO K10</p>
+      </div>
+
+    </div>
+
+
+
+    <!-- Navbar Five box 5️⃣5️⃣5️⃣5️⃣-->
+
+
+    <div class="container-fluid oppo__product hidden product__6">
+
+      <button class="btn btn-light">Our Story</button>
+      <button class="btn btn-light">ColorOS</button>
+      <button class="btn btn-light">Newsroom</button>
+      <button class="btn btn-light">Campaign</button>
+    </div>
+  </section>
+
+
+  <section id="home-page">
+    <div class="container-fluid home__page-content">
+      <div class="row">
+        <div class="col-lg-6">
+          <h1 class="home-heading">OPPO
+            Reno8 T 5G
+          </h1>
+
+        </div>
+        <div class="col-lg-6">
+
+          <img class="home__page-img" src="images/A78-5G_blue.png.thumb.webp">
+
+        </div>
+      </div>
+    </div>
+
+
+  </section>
+
+  <div class="overlay hidden"></div>
+  </nav>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
